main layout up and running

--- a/src/pages/donate_sell.astro
+++ b/src/pages/donate_sell.astro
@@ -3,7 +3,7 @@ import "../css/style.css";
 import Mainlayout from "../layouts/Mainlayout.astro";
 ---
 
-<Mainlayout title="One Brick">
+<Mainlayout title="Genbrug dit lego">
 <!-- her skriver vi alt indhold til siden ;D -->
 </Mainlayout>
 
