--- a/src/layouts/Mainlayout.astro
+++ b/src/layouts/Mainlayout.astro
@@ -1,6 +1,9 @@
 ---
 import "../css/style.css";
 const {title} = Astro.props;
+import Banner from "../components/Banner.astro";
+import Nav from "../components/Nav.astro";
+import DropDown from "../components/DropDown.astro";
 ---
 
 <html lang="en">
@@ -12,7 +15,11 @@ const {title} = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-        <header></header>
+        <header>
+            <Banner/>
+            <Nav/>
+            <DropDown/>
+        </header>
 		<main>
             <slot/>
         </main>
@@ -22,5 +29,7 @@ const {title} = Astro.props;
 
 
 <style>
+
+
 
 </style>
