--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,14 @@
 ---
 import "../css/style.css";
 import Mainlayout from "../layouts/Mainlayout.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Mainlayout title="One Brick">
 <!-- her skriver vi alt indhold til siden ;D -->
 </Mainlayout>
+
+<Footer/>
 
 <style>
 
