changed footer color into varibel color from css

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,7 @@
 import Contact from "./Contact.astro";
 import Open from "./Open.astro";
 import Location from "./Location.astro";
+import "../css/style.css";
 ---
 
 <div class="footer"> <!-- idel i flex -->
@@ -12,7 +13,7 @@ import Location from "./Location.astro";
 
 <style>
 .footer{
-    background-color: rgb(44, 44, 44);
+    background-color: var(--footer_color);
     
 }
 
