buttons desktop done

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@ import Location from "./Location.astro";
 
 <style>
 .footer{
-    background-color: rgb(44, 44, 44);
+    background-color: #151513;
     
 }
 
