--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,9 @@
 import "../css/style.css";
 import Mainlayout from "../layouts/Mainlayout.astro";
 import Footer from "../components/Footer.astro";
+import BuyBrickButtons from "../components/BuyBrickButtons.astro"
+import ExploreButtons from "../components/ExploreButtons.astro";
+import ChoseColorButtons from "../components/ChoseColorButtons.astro";
 ---
 
 <Mainlayout title="One Brick">
@@ -9,7 +12,12 @@ import Footer from "../components/Footer.astro";
 </Mainlayout>
 
 <Footer/>
-
+<br> <br>
+<BuyBrickButtons/>
+<br> <br> <br>
+<ExploreButtons/>
+<br> <br> <br>
+<ChoseColorButtons/>
 <style>
 
 </style>
