footer background changed

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ import "../css/style.css";
 
 <style>
 .footer{
-    background-color: rgb(44, 44, 44);
+    background-color: var(--footer_color);
     
 }
 
