--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,12 @@ import Footer from "../components/Footer.astro";
 import BuyBrickButtons from "../components/BuyBrickButtons.astro"
 import ExploreButtons from "../components/ExploreButtons.astro";
 import ChoseColorButtons from "../components/ChoseColorButtons.astro";
+import ProcentBanner from "../components/ProcentBanner.astro";
 ---
 
 <Mainlayout title="One Brick">
+
+<ProcentBanner header="34%" text="af danskerne sælger deres ting for at gøre noget godt for miljøet"/>
 <!-- her skriver vi alt indhold til siden ;D -->
 </Mainlayout>
 
