new icons concept

--- a/src/pages/concept.astro
+++ b/src/pages/concept.astro
@@ -17,10 +17,10 @@ import Footer from "../components/Footer.astro";
 
     <p class="paragraf-3">Vi mener at vores fornemmeste opgave er at give brugte legoklodser et nyt liv, uden at dette skal gå på kompromis med kvaliteten af klodsen.</p>
 
-    <Process img="../Public/img-figur/Legobrik.svg" alt="Legoklods" header="1. Vask" text="Legoklodsen bliver vasket i neutral sæbe, eddike og vand."/>
-    <Process img="../Public/img-figur/Legobrik.svg" alt="Legoklods" header="2. Tørring" text="Legoklodsen bliver lagt til tørring i et tørrerum."/>
-    <Process img="../Public/img-figur/Legobrik.svg" alt="Legoklods" header="3. Sortering" text="Legoklodsen sorteres efter ønsket kvalitet."/>
-    <Process img="../Public/img-figur/Legobrik.svg" alt="Legoklods" header="4. Pakning" text="Legoklodsen pakkes og sendes af sted til forbrugeren."/>
+    <Process img="../Public/icons/vask.svg" alt="Vask legoklods" header="1. Vask" text="Legoklodsen bliver vasket i neutral sæbe, eddike og vand."/>
+    <Process img="../Public/icons/tørring.svg" alt="Tør legoklods" header="2. Tørring" text="Legoklodsen bliver lagt til tørring i et tørrerum."/>
+    <Process img="../Public/icons/sortering.svg" alt="Sorter legoklods" header="3. Sortering" text="Legoklodsen sorteres efter ønsket kvalitet."/>
+    <Process img="../Public/icons/pakning.svg" alt="Pak legoklods" header="4. Pakning" text="Legoklodsen pakkes og sendes af sted til forbrugeren."/>
 
     <ProcentBanner header="51%" text="Mener at gode genbrugsvare spiller en vigtig rolle for at skabe et bæredygtigt samfund"/>
 
