--- a/src/components/Process.astro
+++ b/src/components/Process.astro
@@ -17,11 +17,19 @@ const {img, header, text} = Astro.props;
         display: grid;
         grid-template-columns: 1fr 1fr;
         margin-top: 20px;
+        padding-bottom: 30px;
     }
 
     .img {
         margin-left: 40px;
-        margin-top: 20px;
+        margin-top: 45px;
+
+    }
+
+    img{
+        max-width: 50%;
+        height: 80px;
+        margin-top: -30px;
     }
     .text{
         margin-right: 30px;
@@ -32,18 +40,23 @@ const {img, header, text} = Astro.props;
     }
 
     .text p {
-        margin-top: -10px;
+        margin-top: 10px;
     }
 
     @media (min-width: 1000px){
         .img {
-        margin-left: 70px;
-        margin-top: 20px;
+            margin-left: 70px;
+            margin-top: 20px;
     }
 
+    img{
+        max-width: 50%;
+        height: 120px;
+        margin-top: -40px;
+    }
     .text{
         margin-right: 30px;
-        margin-left: -550px;
+        margin-left: -500px;
         margin-top: -20px;
         font-family: var(--system-ui);
         font-size: 22px;
