--- a/src/components/BuyBrickButtons.astro
+++ b/src/components/BuyBrickButtons.astro
@@ -6,16 +6,25 @@ import "../css/style.css";
 
 <style>
 a{
-    background-color: #D0C6A2;
-    color:#151513; 
-    padding: 20px 25px;
+    background-color: var(--button_yellow);
+    color:var(--footer_color); 
+    padding: 18px 22px;
     border-radius: 5px;
     text-decoration: none;
+    font-size: 14px;
 }
 
 a:hover{
-    background-color: #151513;
-    color: #D0C6A2;
-    border: 2px solid #D0C6A2;
+    background-color: var(--footer_color);
+    color: var(--font_color);
+    border: 2px solid var(--button_yellow);
+}
+
+@media screen and (min-width: 1000px){
+    a{
+        font-size: 16px;
+        padding: 20px 24px;
+    }
+
 }
 </style>
