--- a/src/components/DonateSellButtons.astro
+++ b/src/components/DonateSellButtons.astro
@@ -1,9 +1,38 @@
 ---
+import "../css/style.css";
+const {text} = Astro.props
 ---
-<button>
-    <slot />
+<button> 
+    {text}
 </button>
 
 <style>
-    
+    button{
+    color:var(--font_color);
+    background-color: var(--button_red);
+    padding:10px 18px;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 5px;
+    border:none;
+}
+
+button:hover{
+    color:var(--font_color);
+    background-color: var(--footer_color);
+    border:2px solid var(--button_red);
+    padding:8px 16px;
+}
+
+@media screen and (min-width: 1000px){
+    button{
+        padding:12px 20px;
+        font-size: 16px;
+    }
+
+    button:hover{
+        padding:10px 18px;
+        font-size: 16px;
+    }
+}
 </style>
