--- a/src/components/ExploreButtons.astro
+++ b/src/components/ExploreButtons.astro
@@ -4,19 +4,33 @@
 
 <style>
 button{
-    color:aliceblue;
-    background-color: maroon;
-    padding:10px 18px;
-    font-size: 14px;
+    color:var(--font_color);
+    background-color: var(--button_red);
+    padding:8px 16px;
+    font-size: 12px;
     cursor: pointer;
     border-radius: 5px;
     border:none;
 }
 
 button:hover{
-    color:aliceblue;
-    background-color: #151513;
-    border:2px solid maroon;
-    padding:8px 16px;
+    color:var(--font_color);
+    background-color: var(--footer_color);
+    border:2px solid var(--button_red);
+    padding:6px 14px;
 }
+
+@media screen and (min-width: 1000px){
+    button{
+        padding:10px 18px;
+        font-size: 14px;
+    }
+
+    button:hover{
+        padding:8px 16px;
+        font-size: 14px;
+    }
+}
+
+
 </style>
