udforsk button til forside done

--- a/src/pages/donate_sell.astro
+++ b/src/pages/donate_sell.astro
@@ -1,10 +1,15 @@
 ---
 import "../css/style.css";
 import Mainlayout from "../layouts/Mainlayout.astro";
+import HomeExplorebuttons from "../components/HomeExplorebuttons.astro";
 ---
 
 <Mainlayout title="Genbrug dit lego">
 <!-- her skriver vi alt indhold til siden ;D -->
+<br> <br><br><br>
+<HomeExplorebuttons text="UDFORSK SLAG/DONER"/>
+<br> <br><br><br>
+
 </Mainlayout>
 
 <style>
