--- a/src/pages/productlist.astro
+++ b/src/pages/productlist.astro
@@ -16,11 +16,11 @@ const data = await fetch("https://zalgeaakczgvvabyukxy.supabase.co/rest/v1/onebr
 <Mainlayout title="Produkter">
     <article class="grid_1">
         <section class="category_list">
-
+            
         </section>
         <section class="product_list">
             <h1>Produkter</h1>
-            <button class="category_bnt">KATEGORI LISTE <img class="drop_down_pil" src="../../public/drop_down_pil.svg" alt="pil icon"></button>
+            <button class="category_bnt">KATEGORI LISTE <img class="drop_down_arrow" src="../../public/drop_down_pil.svg" alt="pil icon"></button>
             <DropCategory/>
             <div class="product_grid">
                {data.map((product)=>{
@@ -54,8 +54,18 @@ const data = await fetch("https://zalgeaakczgvvabyukxy.supabase.co/rest/v1/onebr
         text-align: start;
     }
 
-    .drop_down_pil:active {
+    .drop_down_arrow.active {
         rotate: 90deg;
+    }
+
+    .category_bnt{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        height: 35px;
+        width: 150px;
+        
     }
 
     @media (min-width: 1000px){
