--- a/src/components/BuyBrickButtons.astro
+++ b/src/components/BuyBrickButtons.astro
@@ -15,7 +15,7 @@ a{
 }
 
 a:hover{
-    background-color: var(--footer_color);
+    background-color: var(--background_color);
     color: var(--font_color);
     border: 2px solid var(--button_yellow);
 }
