--- a/src/components/Delivery.astro
+++ b/src/components/Delivery.astro
@@ -62,4 +62,26 @@
         margin-left: -50px;
     }
   
+    @media (min-width: 1000px){
+        h1{
+        font-size: 22px;
+    }
+
+    p{
+        font-size: 18px;
+    } 
+
+    .levering {
+        margin-left: 150px;
+        text-align: center;
+    }
+
+    img{
+        margin-top: 20px;
+    }
+
+    .fragt{
+        margin-left: -200px;
+    }
+    }
 </style>
