--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -4,8 +4,8 @@
 <div class="contact_box">
     <p class="contact"> KONTAKT:</p>
     <div class="contact_text"> 
-        <p>Telefon: +45 12 34 56 78</p>
-        <p> Mail: Noget.hej@gmail.com</p>
+        <p>Telefon: +45 32 85 92 38</p>
+        <p> Mail: Info@onebrick.dk</p>
     </div>
     <div class="flex"> 
         <a href=""> 
