--- a/src/components/Location.astro
+++ b/src/components/Location.astro
@@ -4,8 +4,8 @@
 <div class="location_box">
     <p class="location">LOKATION:</p>
     <div>
-        <p>Enmegetlangtadresse nr. 20</p>
-        <p>2879 Anerdetikke</p>
+        <p>Bagsværd hovedgade 53-57</p>
+        <p>2880 Bagsværd</p>
     </div>
 </div>
 
