--- a/src/components/ProductCard.astro
+++ b/src/components/ProductCard.astro
@@ -48,7 +48,25 @@ p{
     height: 30px;
     align-self: self-start;
     margin-top: 20px;
+    font-family: ;
+    color:var(--font_color);
+    background-color: var(--button_red);
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 3px;
+    border:none;
 }
+
+.se_mere_bt:hover{
+    background-color: var(--footer_color);
+    border:3px solid var(--button_red);
+}
+
+.se_mere_bt:active{
+    background-color: var(--footer_color);
+    border:3px solid var(--button_red);
+}
+
 
 @media (min-width: 1000px){
      
