--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,15 +21,19 @@ body {
   --footer_color: #151513;
 }
 
-p, h1, h2, h3, h4 {
+p,
+h1,
+h2,
+h3,
+h4 {
   color: var(--font_color);
   font-family: var(--system-ui);
 }
 
-h2{
+h2 {
   font-size: 40px;
-  margin:0;
-  padding:6px 0 0 0;
+  margin: 0;
+  padding: 6px 0 0 0;
 }
 
 a {
@@ -50,6 +54,10 @@ li {
   list-style: none;
 }
 
-body{
+body {
   background-color: var(--background_color);
+}
+
+button {
+  font-family: var(--system-ui);
 }
