--- a/src/components/BuyBox.astro
+++ b/src/components/BuyBox.astro
@@ -9,20 +9,20 @@ const {titel, header, text} = Astro.props
 <style>
    h1 {
     font-size: 12px;
-    margin-left: 30px;
+    margin-bottom: 20px;
    }
 
    h2 {
     font-size: 30px;
     font-weight: 400;
-    margin-left: 30px;
     margin-right: 30px;
+    margin-bottom: 0px;
    }
 
    h3{
     font-size: 18px;
     font-weight: 300;
-    margin: 30px;
+    margin-bottom: 70px;
    }
 
 </style>
