--- a/src/components/BuyBrickButtons.astro
+++ b/src/components/BuyBrickButtons.astro
@@ -2,7 +2,7 @@
 import "../css/style.css";
 ---
 
-<a href="">KØB BRUGTE LEGOKLODSER</a>
+<a href="/productlist">KØB BRUGTE LEGOKLODSER</a>
 
 <style>
 a{
@@ -24,6 +24,7 @@ a:hover{
     a{
         font-size: 16px;
         padding: 20px 24px;
+        margin-left: 70px;
     }
 
 }
