--- a/src/components/HomeExplorebuttons.astro
+++ b/src/components/HomeExplorebuttons.astro
@@ -17,7 +17,7 @@ const {text, href_text} = Astro.props
 
 a:hover{
     color:var(--font_color);
-    background-color: var(--footer_color);
+    background-color: var(--background_color);
     border:2px solid var(--button_red);
     padding:20px 20px;
 }
